--- a/Clase 8 (cvmio)/index.html
+++ b/Clase 8 (cvmio)/index.html
@@ -5,7 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="/Clase 8 (cvmio)/css/styles.css">
-    <title>CVBatman</title>
+    <script src="https://kit.fontawesome.com/4635025c29.js" crossorigin="anonymous"></script>
+    <title>CV PRISTUPA ROMAN</title>
 </head>
 <body>
     <header>
@@ -25,24 +26,24 @@
         <h2>FORMACIÓN ACADÉMICA</h2>
         <article>
             <ul type="none">
-            <li><span class="negrita">1996-2001:</span><Span>Escuela Enseñanza Tecnica Nº3</Span><br><span class="padding30"> Mestro Mayor de Obras</span></li>
-            <li><p><span class="negrita">2008-2009: </span><span>Instituto Superior de Seguridad Public</span><br><span class="padding30">Tecnico Superior en Seguridad Publica</span></li>
-            <li><p><span class="negrita">2015-Actual: </span><span>Universidad Nacional de Lanus</span><br><span class="padding30">Licenciatura en Seguridad Publica</span></li>
+                <li><p><span class="negrita">2015-Actual: </span><span>Universidad Nacional de Lanus</span><br><span class="padding30">Licenciatura en Seguridad Publica</span></li>
+                <li><p><span class="negrita">2008-2009: </span><span>Instituto Superior de Seguridad Public</span><br><span class="padding30">Tecnico Superior en Seguridad Publica</span></li>
+                <li><span class="negrita">1996-2001:</span><Span>Escuela Enseñanza Tecnica Nº3</Span><br><span class="padding30"> Mestro Mayor de Obras</span></li>
             </ul>
         </article>
         <h2>EXPERIENCIA LABORAL</h2>
         <article>
             <Ul type="none">
-                <li><p><span class="negrita">2004-2005:</span>Digitalizacion de Planos Autocad</p></li>
-                <li><p class="padding20">Fabricación de Maquinaria para la Construcción, Recomar-Rauzi.</p></li>
-                <li><p><span class="negrita">2008-2011:</span>Oficial de Policia</p></li>
-                <li><p class="padding20"> Ministerio de Seguridad de la Provincia De Buenos Aires</p></li>
                 <li><p><span class="negrita">2011-Actual:</span>Inspector de Policia</p></li>
                 <li><P class="padding20">Ministerio de Justicia Y Seguridad de la Ciudad Autonoma de Buenos Aires</P></li>
+                <li><p><span class="negrita">2008-2011:</span>Oficial de Policia</p></li>
+                <li><p class="padding20"> Ministerio de Seguridad de la Provincia De Buenos Aires</p></li>
+                <li><p><span class="negrita">2004-2005:</span>Digitalizacion de Planos Autocad</p></li>
+                <li><p class="padding20">Fabricación de Maquinaria para la Construcción, Recomar-Rauzi.</p></li>
             </Ul>
         </article>
         <footer>
-            <span class="negrita">1569729797</span><img src="/Clase 7 (cvBatman)/img/ico_instagram.svg" alt="Logo Instagram" class="inconosfooter"><img src="/Clase 7 (cvBatman)/img/ico_linkedin.svg" alt="Logo Linkedin"class="inconosfooter">
+            <span class="negrita">1569729797</span><a href="https://www.instagram.com/alesis_pristupa"><i class="fa-brands fa-instagram inconosfooter" class="inconosfooter"></i></a><a href="www.linkedin.com/in/roman-pristupa"><i class="fa-brands fa-linkedin inconosfooter"></i></a>
     </section>
 </body>
 </html>
