arregle el enlace

--- a/Clase 8 (cvmio)/index.html
+++ b/Clase 8 (cvmio)/index.html
@@ -43,7 +43,7 @@
             </Ul>
         </article>
         <footer>
-            <span class="negrita">1569729797</span><a href="https://www.instagram.com/alesis_pristupa"><i class="fa-brands fa-instagram inconosfooter" class="inconosfooter"></i></a><a href="www.linkedin.com/in/roman-pristupa"><i class="fa-brands fa-linkedin inconosfooter"></i></a>
+            <span class="negrita">1569729797</span><a href="https://www.instagram.com/alesis_pristupa"><i class="fa-brands fa-instagram inconosfooter" class="inconosfooter"></i></a><a href="https://www.linkedin.com/in/romanpristupa"><i class="fa-brands fa-linkedin inconosfooter"></i></a>
     </section>
 </body>
 </html>
