Solucionado Cv Batman

--- a/Clase 6 (petshop)/index.html
+++ b/Clase 6 (petshop)/index.html
@@ -3,7 +3,7 @@
     <head>
         <meta charset="utf-8">
         <title>Pet Shop</title>
-        <link rel=stylesheet" href="/css/style.css">
+        <link rel=stylesheet" href="/Clase 6 (petshop)/css/style.css">
     </head>    
         <body>
             <header>
@@ -19,7 +19,7 @@
                 </section>
                 <nav>
                     <ul>
-                        <li><img src="/img/Logo.svg" alt=""></li>
+                        <li><img src="/Clase 6 (petshop)/img/Logo.svg" alt="Logo Petshop"></li>
                         <li>Menu Principal</li>
                             <ul>
                                 <li>Categorias</li>
