--- a/Clase 7 (cvBatman)/index.html
+++ b/Clase 7 (cvBatman)/index.html
@@ -10,8 +10,8 @@
 <body>
     <header>
         <img src="/Clase 7 (cvBatman)/img/logo batman.svg" alt="Logo Batman" width="100">
+        <h1>CURRICULUM VITAE DE BRUCE WAYNE</h1>
     </header>
-    <h1>CURRICULUM VITAE DE BRUCE WAYNE</h1>
     <br>
     <br>
     <br>
@@ -32,12 +32,12 @@
         <h2>EXPERIENCIA LABORAL</h2>
         <article>
             <Ul type="none">
-                <li><p><span class="negrita">1975-1985:</span>Desocupado</p></li>
-                <li><p class="padding20">Sin trabajo porquer se me rompió el batimovil</p></li>
-                <li><p><span class="negrita">1965-1975:</span>azavillanos y demás chusma</p></li>
-                <li><p class="padding20">Atrapé a Gatubela a joker a Victor Fries lo dejé porque se me congeló la capa</p></li>
-                <li><p><span class="negrita">1962-1965:</span>Aprendiz de superhéroes</p></li>
-                <li><P class="padding20">Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</P></li>
+                <li><span class="negrita">1975-1985:</span>Desocupado</li>
+                <li class="padding20">Sin trabajo porquer se me rompió el batimovil</li>
+                <li><span class="negrita">1965-1975:</span>azavillanos y demás chusma/li>
+                <li class="padding20">Atrapé a Gatubela a joker a Victor Fries lo dejé porque se me congeló la capa</li>
+                <li><span class="negrita">1962-1965:</span>Aprendiz de superhéroes</li>
+                <li class="padding20">Hice pasantía con Superman. Opté por usar mascara porque no pude aprender a peinarme el rulo</li>
             </Ul>
         </article>
         <footer>
