--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
             <li><a href="/Clase 7 (cvBatman)/index.html"><img src="/img/logo batman.svg" width="50" class="alineacionv"><span>CV Batman</span></a></li>
             <br>
             <li><a href="/Clase 8 (cvmio)/index.html"><img src="/img/logo foto.jpeg" width="50" class="alineacionv"><span>Mi CV</span></a></li>
-            <li></li>
+            <li><a href="/romanpristupa.github.io/Barberia Alura/index.html">Barberia Alura</a></li>
         </ul>
     </nav>
     
