--- a/index.html
+++ b/index.html
@@ -14,10 +14,10 @@
 <body>
     <nav>
         <ul type="none">
-            <li><a href="/Clase 7 (cvBatman)/index.html"><img src="/img/logo batman.svg" width="50" class="alineacionv"><span>CV Batman</span></a></li>
+            <li><a href="Clase 7 (cvBatman)/index.html"><img src="/img/logo batman.svg" width="50" class="alineacionv"><span>CV Batman</span></a></li>
             <br>
-            <li><a href="/Clase 8 (cvmio)/index.html"><img src="/img/logo foto.jpeg" width="50" class="alineacionv"><span>Mi CV</span></a></li>
-            <li><a href="/Barberia Alura/index.html">Barberia Alura</a></li>
+            <li><a href="Clase 8 (cvmio)/index.html"><img src="/img/logo foto.jpeg" width="50" class="alineacionv"><span>Mi CV</span></a></li>
+            <li><a href="Barberia Alura/index.html">Barberia Alura</a></li>
         </ul>
     </nav>
     
